--- a/templates/stock.html
+++ b/templates/stock.html
@@ -3,8 +3,70 @@
 {% block content %}
 
 <div>
+    <!-- Button trigger modal -->
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+        Add stock
+    </button>
+
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Adding Stocks</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form action="/add_stock" method="post">
+                        <div>
+                            <select class="form-select" aria-label="Default select example" name="pid">
+                                <option selected>Add Your Stock</option>
+                                {% for product in products %}
+                                <option value="{{product[0]}}">{{product[1]}}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                        <div class="mb-3">
+                            <label for="exampleInputPassword1" class="form-label">Stock Quantity</label>
+                            <input type="number" name="stock_quantity" class="form-control" id="exampleInputPassword1">
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <button type="submit" class="btn btn-primary">Add Stock</button>
+                        </div>
+                    </form>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+</div>
+
+
+
+
+<div class="mt-5 p-4">
     <h1>Welcome to the Stock Page</h1>
-    <p>This is the content of the Stock page.</p>
+</div>
+
+<div class="table">
+    <table id="example" class="table table-striped">
+        <thead>
+            <tr>
+                <th>PID</th>
+                <th>stock_Quantity</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for stock in stock %}
+            <tr>
+                <td>{{stock[0]}}</td>
+                <td>{{stock[1]}}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 </div>
 
 {% endblock %}
